--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "FuzzyLite/fuzzylite"]
 	path = FuzzyLite/fuzzylite
-	url = https://github.com/fuzzylite/fuzzylite.git
+	url = https://github.com/9matan/fuzzylite.git
