Changed solution infrastructure

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "FuzzyLite/fuzzylite"]
 	path = FuzzyLite/fuzzylite
 	url = https://github.com/9matan/fuzzylite.git
+[submodule "code/FuzzyLite/fuzzylite"]
+	path = code/FuzzyLite/fuzzylite
+	url = https://github.com/9matan/fuzzylite.git
