--- a/code/FuzzyLite/FuzzyLite.vcxproj
+++ b/code/FuzzyLite/FuzzyLite.vcxproj
@@ -25,7 +25,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -69,8 +69,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(SolutionDir)\bin\$(Configuration)\</OutDir>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(ProjectDir)\fuzzylite\fuzzylite</IncludePath>
+    <OutDir>$(SolutionDir)..\bin\$(Configuration)</OutDir>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(ProjectDir)fuzzylite\fuzzylite</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -164,7 +164,6 @@
     <ClCompile Include="fuzzylite\fuzzylite\src\imex\Importer.cpp" />
     <ClCompile Include="fuzzylite\fuzzylite\src\imex\JavaExporter.cpp" />
     <ClCompile Include="fuzzylite\fuzzylite\src\imex\RScriptExporter.cpp" />
-    <ClCompile Include="fuzzylite\fuzzylite\src\main.cpp" />
     <ClCompile Include="fuzzylite\fuzzylite\src\norm\s\AlgebraicSum.cpp" />
     <ClCompile Include="fuzzylite\fuzzylite\src\norm\s\BoundedSum.cpp" />
     <ClCompile Include="fuzzylite\fuzzylite\src\norm\s\DrasticSum.cpp" />
