--- a/FuzzyTowerEngine/TowerDefenseEngine/TowerDefenseEngine.vcxproj
+++ b/FuzzyTowerEngine/TowerDefenseEngine/TowerDefenseEngine.vcxproj
@@ -151,6 +151,7 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="towerdefenseengine\src\Game.cpp" />
     <ClCompile Include="towerdefenseengine\TowerDefenseEngine_PCH.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -167,6 +168,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="towerdefenseengine\tde\Game.h" />
     <ClInclude Include="towerdefenseengine\tde\unit\GameUnit.h">
       <SubType>
       </SubType>
